<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:key="pref_display"
      android:title="@string/pref_display_title">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_nightmode"
        android:summary="@string/pref_nightmode_summary"
        android:title="@string/pref_nightmode"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_backtotop"
        android:summary="@string/pref_backtotop_summary"
        android:title="@string/pref_backtotop"/>

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_extras"
      android:title="@string/pref_extras">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_newtab_switch_to"
        android:title="@string/pref_newtab_switch_title"
        android:summary="@string/pref_newtab_switch_summary"/>

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_zoom_sub"
      android:title="@string/pref_zoom_sub_title">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_zoom_enabled"

        android:title="@string/pref_zoom_enable"/>

    <org.kiwix.kiwixmobile.views.SliderPreference
        android:defaultValue="250.0"
        android:dialogMessage="0"
        android:enabled="false"
        android:key="pref_zoom_slider"
        android:summary="@array/pref_zoom_entryvalues"
        android:title="@string/pref_zoom_dialog"/>
  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_history"
      android:title="History">

    <Preference
        android:key="pref_clear_all_history"
        android:summary="@string/pref_clear_all_history_summary"
        android:title="@string/pref_clear_all_history_title"/>

  </PreferenceCategory>
  <PreferenceCategory
      android:key="pref_language"
      android:title="@string/pref_language_title">

    <ListPreference
        android:dialogTitle="@string/pref_language_chooser"
        android:key="pref_language_chooser"
        android:summary="@string/pref_language_chooser"
        android:title="@string/pref_language_title"/>

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_info"
      android:title="@string/pref_info_title">

    <EditTextPreference
        android:enabled="false"
        android:key="pref_version"
        android:persistent="false"
        android:selectable="false"
        android:shouldDisableView="false"
        android:title="@string/pref_info_version"/>

  </PreferenceCategory>

</PreferenceScreen>
